TestRepo2/src/objects/Objective__c.object
<CustomObject>
    <fields>
        <fullName>BrandBottle_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BrandBottle Size</label>
        <referenceTo>BrandBottle_Size__c</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cases_Displayed__c</fullName>
        <label>Cases Displayed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Goal__c</fullName>
        <label>General Goal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Content__c</fullName>
        <label>Link to Content</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location_Grade__c</fullName>
        <inlineHelpText>Optional
A = Front end cap, main lobby, checkout 
B = Back of store, isle display, mid end cap 
C = Others</inlineHelpText>
        <label>Location Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Minimum_Number_of_Accounts__c</fullName>
        <label>Minimum Number of Accounts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective_Reporting_Type__c</fullName>
        <description>This field is only for reporting purposes (Individual Activity Management).  The values mirror the Record Type.</description>
        <label>Objective Reporting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ease of Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFA_POS_Items__c</fullName>
        <label>SFA POS Items</label>
        <picklist>
            <picklistValues>
                <fullName>banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>case card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>case card-DGUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>case stacker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>case tucker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ceiling dangler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>coasters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>condiment tray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contravision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>corebuff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>counter card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>counter unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>decal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>glassware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gutter mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>key rings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lapel pins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>napkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>napkin holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>necker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>one case bin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pennant string</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>permanent display piece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pole topper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>poster</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Standard_Required__c</fullName>
        <formula>BrandBottle_Size__r.Brand__r.Parent_Brand__r.Gold_Standard_Shelf__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Display_Price__c</fullName>
        <inlineHelpText>“The prices discussed herein are suggestions and for discussion purposes only. All pricing decisions are and will be the sole decision of the final selling party.”</inlineHelpText>
        <label>Suggested Display Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Suggested_Shelf_Price__c</fullName>
        <inlineHelpText>“The prices discussed herein are suggestions and for discussion purposes only. All pricing decisions are and will be the sole decision of the final selling party.”</inlineHelpText>
        <label>Suggested Shelf Price</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Objective</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BrandBottle_Size__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Minimum_Number_of_Accounts__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <recordTypes>
        <fullName>Display_Objective</fullName>
        <active>true</active>
        <label>Display Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distribution_Objective</fullName>
        <active>true</active>
        <label>Distribution Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ease_of_Shop_Objective</fullName>
        <active>true</active>
        <label>Ease of Shop Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Objective</fullName>
        <active>true</active>
        <label>General Objective</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Objective</fullName>
        <active>true</active>
        <label>Staff Training Objective</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>